# est_alan

./: .dockerignore  .env.dockerfile.example  .env.example  .gitignore  Dockerfile  README.md  TODO.md  build.bat  build.sh  clean_venv.bat  clean_venv.sh  docker-compose.yml  entrypoint.sh  graph.json  langgraph.json  logs.sh  nginx.conf  pyproject.toml  reset.sh  restart-all.sh  run_containers.bat  run_containers.sh  setup_venv.bat  setup_venv.sh  stop-all.sh
src/: graph.json  pyproject.toml  run.py
src/deployment/requirment_collection_agent/: langgraph.json
src/deployment/slide_generate_agent/: .env.example  used_template.html
src/deployment/slide_generate_agent_dev/: langgraph.json  pyproject.toml
src/docs/: 테스트_코드_작성_가이드.md
src/estalan/: TODO.md  __init__.py  constants.py  utils.py
src/estalan/agent/base/: graph.py  node.py  reducer_function.py  state.py
src/estalan/agent/langgraph/: supervisor_agent.py
src/estalan/core/: agent.py  node.py  prompt.py
src/estalan/deployment/: cli.py  migrate.py  server.py  stream.py
src/estalan/llm/: __init__.py  base.py  estalan_anthropic.py  estalan_google_vertexai.py  estalan_openai.py  lg_exaone.py  mock_llm.py  utils.py
src/estalan/logging/: __init__.py  base.py
src/estalan/messages/: base.py  utils.py
src/estalan/messages/format/: chat_html.py
src/estalan/prebuilt/: react_agent.py  supervisor.py
src/estalan/prebuilt/requirement_analysis_agent/: __init__.py  agent.py  context_schema.py  converter.py  prompt.py  state.py  tools.py
src/estalan/tools/: mixins.py  search.py  url.py
src/notebooks/: run_chatbot.ipynb  test_api_server.ipynb
src/script/: run_slide_agent.py
src/tests/test_estalan/test_deployment/: test_cli.py
src/tests/test_estalan/test_llm/: test_base.py  test_estalan_anthropic.py  test_utils.py  (+2 more)
src/tests/test_messages/: test_base.py  test_utils.py
(+302 files in other folders)
