[project]
name = "est-alan"
version = "0.1.0"
description = ""
authors = [
    {name = "EST", email = "swseo@estsoft.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.24",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem,postegre]>=0.3.1",
    "langgraph-supervisor>=0.0.27",
    "playwright>=1.52.0",
    "pydantic>=2.11.5",
    "langgraph-checkpoint-postgres",
    "langgraph-sdk>=0.1.70",
    "langgraph-api==0.2.130",
    "pytest>=8.4.1",
    "coverage>=7.10.3",
    "pytest-asyncio"
]

[tool.poetry.dependencies]
requests = { git = "https://<PAT>@github.com/swseo-est/est_alan.git", branch = "master" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["estalan"]

[tool.hatch.build.targets.sdist]
include = [
    "/estalan",
    "/README.md",
    "/pyproject.toml",
]
